--- a/index.html
+++ b/index.html
@@ -105,40 +105,34 @@
               </td>
             </tr>
 
-            <!-- Abandoned Cart Block (image | details | CTA) -->
-            {% foreach item in product_catalog.abandoned_cart() | required_length(1) limit 6 %}
-            <tr>
-              <td class="px" style="padding:16px 40px;">
-                <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
-                  <tr>
-                    <td class="stack" width="160" valign="middle" style="padding:0 0 10px 0;">
-                      <a href="{{ item['link'] }}" target="_blank"><img src="{{ item['image'] }}" width="160" alt="" style="display:block;border:0;width:160px;height:auto;"></a>
-                    </td>
-                    <td class="stack" valign="middle" style="text-align:center;padding:0 12px;">
-                      <div style="font:bold 20px/1.25 Lato,Arial,Helvetica,sans-serif;color:#000;">
-                        <a href="{{ item['link'] }}" target="_blank" style="color:#000;text-decoration:none;">{{ item['title'] }}</a>
-                      </div>
-                      {% if item['msrp'] > item['price'] %}
-                      <div style="font:14px Lato,Arial,Helvetica,sans-serif;color:#000;text-decoration:line-through;margin-top:6px;">
-                        ${{ item['msrp'] | number_format(2, '.', ' ') }}
-                      </div>
-                      {% endif %}
-                      <div style="font:16px Lato,Arial,Helvetica,sans-serif;color:#000;margin-top:2px;">
-                        ${{ item['price'] }}
-                      </div>
-                    </td>
-                    <td class="stack" width="180" valign="middle" style="text-align:right;">
-                      <table role="presentation" cellpadding="0" cellspacing="0" bgcolor="#000" align="right" style="border-radius:2px;">
-                        <tr>
-                          <td><a href="{{ item['link'] }}" target="_blank" class="btn" style="display:block;padding:11px 22px;font:bold 16px Lato,Arial,Helvetica,sans-serif;color:#fff;text-decoration:none;">SHOP NOW</a></td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            {% endforeach %}
+                 <!-- Abandoned Cart Tile -->
+              <tr>
+                <td class="pad-hrz" style="padding:25px 40px;">
+                  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+                    <tr>
+                      <!-- Image -->
+                      <td valign="middle" width="200" class="stack">
+                        <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="200" alt="Cart Item" class="full" style="display:block;width:200px;height:auto;border:0;">
+                      </td>
+                      <!-- Copy -->
+                      <td valign="middle" class="stack" style="text-align:center;padding:0 14px;">
+                        <div style="font:18px/1.3 Lato, Arial, Helvetica, sans-serif; font-weight:bold;color:#000;">Bessemer Black</div>
+                        <div style="font:12px/1.4 Lato, Arial, Helvetica, sans-serif;color:#000;margin-top:6px;">$259.99</div>
+                      </td>
+                      <!-- CTA -->
+                      <td valign="middle" width="180" class="stack" style="text-align:right;">
+                        <table role="presentation" cellpadding="0" cellspacing="0" border="0" align="right">
+                          <tr>
+                            <td bgcolor="#d60e00" style="border-radius:2px;">
+                              <a href="#" target="_blank" style="display:block;padding:11px 22px;font:bold 16px/1.2 Lato, Arial, Helvetica, sans-serif;color:#fff;text-decoration:none;">SHOP NOW</a>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
             <!-- Recommended 3-col -->
             <tr>
@@ -166,49 +160,36 @@
               </td>
             </tr>
 
-            <!-- Shop by Category -->
+          <!-- SHOP BY CATEGORY -->
+    <table width="100%" role="presentation" bgcolor="#ffffff">
+      <tr>
+        <td class="px" style="padding-top:14px;padding-bottom:12px;">
+          <table width="100%" role="presentation">
             <tr>
-              <td class="px" style="padding:6px 40px 0;">
-                <table role="presentation" width="100%">
-                  <tr>
-                    <td style="height:2px;background:#d5d3d0;"></td>
-                    <td width="180" align="center" style="font:bold 18px Lato,Arial,Helvetica,sans-serif;color:#000;white-space:nowrap;">Shop by Category</td>
-                    <td style="height:2px;background:#d5d3d0;"></td>
-                  </tr>
-                </table>
-              </td>
+              <td><hr></td>
+              <td width="220" align="center"><div class="h1" style="font-size:16px;">Shop by Category</div></td>
+              <td><hr></td>
             </tr>
-            <tr><td style="height:16px;"></td></tr>
-            <tr>
-              <td class="px" style="padding:0 40px;">
-                <table role="presentation" width="100%">
-                  <tr>
-                    <td class="stack" width="50%" style="padding:6px;">
-                      <a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato,Arial,Helvetica,sans-serif;padding:12px;text-align:center;">Fryware &gt;</a>
-                    </td>
-                    <td class="stack" width="50%" style="padding:6px;">
-                      <a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato,Arial,Helvetica,sans-serif;padding:12px;text-align:center;">Saucepans &gt;</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="stack" width="50%" style="padding:6px;">
-                      <a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato,Arial,Helvetica,sans-serif;padding:12px;text-align:center;">Roasting &gt;</a>
-                    </td>
-                    <td class="stack" width="50%" style="padding:6px;">
-                      <a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato,Arial,Helvetica,sans-serif;padding:12px;text-align:center;">Multi-Pans &gt;</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="stack" width="50%" style="padding:6px;">
-                      <a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato,Arial,Helvetica,sans-serif;padding:12px;text-align:center;">Casseroles &gt;</a>
-                    </td>
-                    <td class="stack" width="50%" style="padding:6px;">
-                      <a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato,Arial,Helvetica,sans-serif;padding:12px;text-align:center;">Lids &gt;</a>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
+          </table>
+        </td>
+      </tr>
+      <tr><td class="px" style="padding-bottom:16px;">
+        <table width="100%" role="presentation" cellspacing="10">
+          <tr>
+            <td width="50%"><a class="pill" href="#" target="_blank">Fryware &nbsp;›</a></td>
+            <td width="50%"><a class="pill" href="#" target="_blank">Multi-Pans &nbsp;›</a></td>
+          </tr>
+          <tr>
+            <td width="50%"><a class="pill" href="#" target="_blank">Saucepans &nbsp;›</a></td>
+            <td width="50%"><a class="pill" href="#" target="_blank">Casseroles &nbsp;›</a></td>
+          </tr>
+          <tr>
+            <td width="50%"><a class="pill" href="#" target="_blank">Roasting &nbsp;›</a></td>
+            <td width="50%"><a class="pill" href="#" target="_blank">Lids &nbsp;›</a></td>
+          </tr>
+        </table>
+      </td></tr>
+    </table>
 
             <!-- Shop All CTA -->
             <tr>
