--- a/index.html
+++ b/index.html
@@ -105,62 +105,104 @@
               </td>
             </tr>
 
-                 <!-- Abandoned Cart Tile -->
-              <tr>
-                <td class="pad-hrz" style="padding:25px 40px;">
-                  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
-                    <tr>
-                      <!-- Image -->
-                      <td valign="middle" width="200" class="stack">
-                        <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="200" alt="Cart Item" class="full" style="display:block;width:200px;height:auto;border:0;">
-                      </td>
-                      <!-- Copy -->
-                      <td valign="middle" class="stack" style="text-align:center;padding:0 14px;">
-                        <div style="font:18px/1.3 Lato, Arial, Helvetica, sans-serif; font-weight:bold;color:#000;">Bessemer Black</div>
-                        <div style="font:12px/1.4 Lato, Arial, Helvetica, sans-serif;color:#000;margin-top:6px;">$259.99</div>
-                      </td>
-                      <!-- CTA -->
-                      <td valign="middle" width="180" class="stack" style="text-align:right;">
-                        <table role="presentation" cellpadding="0" cellspacing="0" border="0" align="right">
-                          <tr>
-                            <td bgcolor="#d60e00" style="border-radius:2px;">
-                              <a href="#" target="_blank" style="display:block;padding:11px 22px;font:bold 16px/1.2 Lato, Arial, Helvetica, sans-serif;color:#fff;text-decoration:none;">SHOP NOW</a>
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
+  <!-- PRODUCT ROW 1 -->
+    <table width="100%" role="presentation" bgcolor="#ffffff" style="padding:10px 0;">
+      <tr>
+        <td align="center" style="width:36%; padding-left:20px; padding-right:10px;">
+          <a href="#" target="_blank">
+            <img src="https://cdn.shopify.com/s/files/1/0564/2223/6320/products/Option3-32CMPANS_40CMROASTER_1024x1024.png?v=1660890400"
+                 alt="Bessemer 4 Piece Cookware Starter Set">
+          </a>
+        </td>
+        <td valign="middle" style="width:44%; padding:10px;">
+          <div class="h1" style="font-size:18px;">Bessemer 4 Piece<br>Cookware Starter Set</div>
+          <div class="small" style="padding-top:6px;">
+            <div class="strike">4,299.96</div>
+            <strong>1,299.96</strong>
+          </div>
+        </td>
+        <td align="center" valign="middle" style="width:20%; padding-right:20px;">
+          <a class="btn" href="#" target="_blank">SHOP NOW</a>
+        </td>
+      </tr>
+    </table>
 
-            <!-- Recommended 3-col -->
+    <!-- PRODUCT ROW 2 -->
+    <table width="100%" role="presentation" bgcolor="#ffffff" style="padding:10px 0;">
+      <tr>
+        <td align="center" style="width:36%; padding-left:20px; padding-right:10px;">
+          <a href="#" target="_blank">
+            <img src="https://cdn.shopify.com/s/files/1/0564/2223/6320/products/1037710-BESS-MULTI-SPAN-24CM-EBONY_1024x1024.png?v=1630982858"
+                 alt="Bessemer Black Multi Saucepan 24cm">
+          </a>
+        </td>
+        <td valign="middle" style="width:44%; padding:10px;">
+          <div class="h1" style="font-size:18px;">Bessemer Black Multi<br>Saucepan 24cm</div>
+          <div class="small" style="padding-top:6px;">
+            <div class="strike">349.99</div>
+            <strong>319.99</strong>
+          </div>
+        </td>
+        <td align="center" valign="middle" style="width:20%; padding-right:20px;">
+          <a class="btn" href="#" target="_blank">SHOP NOW</a>
+        </td>
+      </tr>
+    </table>
+
+    <!-- RETURN TO CART CTA -->
+    <table width="100%" role="presentation" bgcolor="#ffffff">
+      <tr>
+        <td class="px" align="center" style="padding:24px 20px 20px;">
+          <a class="btn" href="#" target="_blank" style="display:block; width:100%; text-align:center; padding:16px 0; font-size:16px;">
+            RETURN TO CART
+          </a>
+        </td>
+      </tr>
+    </table>
+
+    <!-- RECOMMENDED JUST FOR YOU -->
+    <table width="100%" role="presentation" bgcolor="#ffffff">
+      <tr><td class="px" style="padding-bottom:8px;">
+        <table width="100%" role="presentation">
+          <tr>
+            <td><hr></td>
+            <td width="280" align="center"><div class="h1" style="font-size:16px;letter-spacing:.3px;">RECOMMENDED JUST &nbsp;FOR YOU</div></td>
+            <td><hr></td>
+          </tr>
+        </table>
+      </td></tr>
+      <tr>
+        <td class="px" style="padding-bottom:6px;">
+          <table width="100%" role="presentation">
             <tr>
-              <td class="px" style="padding:10px 40px 0;">
-                <div style="text-align:center;font:bold 18px/1.2 Lato,Arial,Helvetica,sans-serif;color:#000;">RECOMMENDED JUST&nbsp; FOR YOU</div>
+              <td width="33.33%" align="center" style="padding:0 8px;">
+                <a href="#" target="_blank">
+                  <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" alt="Bessemer Black Dutch">
+                </a>
+                <div class="small" style="padding-top:10px;">Bessemer Black Dutch</div>
+                <div class="price" style="padding-top:6px;">$ 259.99</div>
+              </td>
+              <td width="33.33%" align="center" style="padding:0 8px;">
+                <a href="#" target="_blank">
+                  <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/2.jpg?eh={{contact.12565}}&es={{contact.12566}}" alt="Bessemer Black">
+                </a>
+                <div class="small" style="padding-top:10px;">Bessemer Black</div>
+                <div class="price" style="padding-top:6px;">$ 159.99</div>
+              </td>
+              <td width="33.33%" align="center" style="padding:0 8px;">
+                <a href="#" target="_blank">
+                  <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/3.jpg?eh={{contact.12565}}&es={{contact.12566}}" alt="Bessemer Black Frypan">
+                </a>
+                <div class="small" style="padding-top:10px;">Bessemer Black Frypan</div>
+                <div class="price" style="padding-top:6px;">$ 199.99</div>
               </td>
             </tr>
-            <tr><td style="height:12px;"></td></tr>
-            <tr><td style="height:2px;background:#d5d3d0;"></td></tr>
-            <tr>
-              <td class="px" style="padding:16px 40px;">
-                <table role="presentation" width="100%" style="text-align:center;">
-                  <tr>
-                    <td class="stack" width="33%">
-                      <a href="#" target="_blank"><img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/4dl16d/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="172" alt="" style="display:block;margin:0 auto;border:0;width:172px;height:auto;"></a>
-                    </td>
-                    <td class="stack" width="33%">
-                      <a href="#" target="_blank"><img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/4dl16d/2.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="172" alt="" style="display:block;margin:0 auto;border:0;width:172px;height:auto;"></a>
-                    </td>
-                    <td class="stack" width="33%">
-                      <a href="#" target="_blank"><img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/4dl16d/3.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="172" alt="" style="display:block;margin:0 auto;border:0;width:172px;height:auto;"></a>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
 
-          <!-- SHOP BY CATEGORY -->
+    <!-- SHOP BY CATEGORY -->
     <table width="100%" role="presentation" bgcolor="#ffffff">
       <tr>
         <td class="px" style="padding-top:14px;padding-bottom:12px;">
@@ -191,73 +233,49 @@
       </td></tr>
     </table>
 
-            <!-- Shop All CTA -->
-            <tr>
-              <td class="px" align="center" style="padding:20px 40px;">
-                <table role="presentation" cellpadding="0" cellspacing="0" bgcolor="#000000" style="border-radius:2px;">
-                  <tr>
-                    <td><a href="#" target="_blank" class="btn" style="display:block;padding:12px 26px;font:bold 16px Lato,Arial,Helvetica,sans-serif;color:#fff;text-decoration:none;">Shop All</a></td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
+    <!-- AFTER CTA IMAGE STRIPS -->
+    <table width="100%" role="presentation" bgcolor="#ffffff">
+      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295693.jpg" alt="The Bessemer Difference"></td></tr>
+      <tr><td style="height:16px"></td></tr>
+      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295694.jpg" alt="Afterpay: Cook now, pay later"></td></tr>
+      <tr><td style="height:16px"></td></tr>
+      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295695.jpg" alt="More than half a century of cooking with Bessemer"></td></tr>
+      <tr><td style="height:16px"></td></tr>
+      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295696.jpg" alt="PFOA Free • Designed in Australia • Lifetime Guarantee"></td></tr>
+    </table>
 
-            <!-- After CTA tiles -->
-            <tr><td align="center" style="padding:0 0 16px;"><a href="#" target="_blank"><img src="https://link.bessemer.com.au/custloads/1024002066/md_295693.jpg" width="620" class="full" alt="The Bessemer Difference" style="display:block;border:0;width:620px;height:auto;"></a></td></tr>
-            <tr><td align="center" style="padding:0 0 16px;"><a href="#" target="_blank"><img src="https://link.bessemer.com.au/custloads/1024002066/md_295694.jpg" width="620" class="full" alt="Cook Now, Pay Later" style="display:block;border:0;width:620px;height:auto;"></a></td></tr>
-            <tr><td align="center" style="padding:0 0 16px;"><a href="#" target="_blank"><img src="https://link.bessemer.com.au/custloads/1024002066/md_295696.jpg" width="620" class="full" alt="PFOA Free" style="display:block;border:0;width:620px;height:auto;"></a></td></tr>
-
-            <!-- Shipping strip -->
-            <tr>
-              <td class="px" style="padding:10px 10px 0;">
-                <table role="presentation" width="100%">
-                  <tr>
-                    <td align="center" style="font:bold 16px Lato,Arial,Helvetica,sans-serif;color:#000;">FREE SHIPPING ON ORDERS OVER $130</td>
-                    <td class="hide-m" align="center" style="font:bold 16px Lato,Arial,Helvetica,sans-serif;color:#000;width:20px;">|</td>
-                    <td align="center" style="font:bold 16px Lato,Arial,Helvetica,sans-serif;color:#000;">30 DAYS RETURN</td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <tr><td style="height:16px;"></td></tr>
-
-            <!-- Help/Advice grey panel -->
-            <tr>
-              <td style="background:#e3e3e3;padding:28px 10px;">
-                <table role="presentation" width="100%">
-                  <tr><td align="center" style="font:bold 18px Lato,Arial,Helvetica,sans-serif;color:#000;">Need help or advice?</td></tr>
-                  <tr><td align="center" style="font:16px/1.4 Lato,Arial,Helvetica,sans-serif;color:#000;padding-top:8px;">
-                    Live Chat : <a href="https://bessemer.com.au/" target="_blank" style="color:#000;text-decoration:underline;">bessemer.com.au</a><br>
-                    9am - 9:30pm AEDT / AEST Mon-Fri<br>
-                    10am - 5:30pm AEDT / AEST Sat and Sun
-                  </td></tr>
-                  <tr><td align="center" style="font:16px Lato,Arial,Helvetica,sans-serif;color:#000;padding-top:12px;">
-                    <a href="#" target="_blank" style="color:#000;text-decoration:underline;">Click here to Contact Customer Service</a>
-                  </td></tr>
-                </table>
-              </td>
-            </tr>
-
-            <!-- Legal + Unsubscribe -->
-            <tr>
-              <td class="px" align="center" style="padding:24px 16px 8px;font:12px/1.5 Lato,Arial,Helvetica,sans-serif;color:#000;">
-                T&amp;C's: Your single-use $10 discount is only valid on an order with a minimum spend of $100 or more, excluding shipping costs. Valid for 7 days from the date of this email.
-                This discount is redeemable online at <a href="http://www.bessemer.com.au" target="_blank" style="color:#000;text-decoration:underline;">www.bessemer.com.au</a> by entering your discount code in the Promotional Code field at checkout. Discount is not redeemable against prior purchases, for gift cards or cash. Discount cannot be used in conjunction with any other discount code offer.
-                <br><br>
-                Mailing Address: Bessemer | PO Box 7224 | Melbourne 3004 | Australia<br>
-                This email was sent by Bessemer | Global Retail Brands Australia Pty Ltd
-              </td>
-            </tr>
-            <tr>
-              <td align="center" style="padding:10px 16px 26px;font:12px Lato,Arial,Helvetica,sans-serif;color:#000;">
-                To unsubscribe from our mailing list, please <a href="#unsubscribe#" style="color:#000;text-decoration:underline;">click here</a>.
-              </td>
-            </tr>
-
-          </table>
+    <!-- SHIPPING / RETURNS TEXT STRIP -->
+    <table width="100%" role="presentation" bgcolor="#ffffff">
+      <tr>
+        <td align="center" style="font:14px/1.4 Arial,Helvetica,sans-serif; color:#000; padding:12px 20px;">
+          <strong>FREE SHIPPING ON ORDERS OVER $130</strong> &nbsp; | &nbsp; <strong>30 DAYS RETURN</strong>
         </td>
       </tr>
     </table>
-  </center>
+
+    <!-- FOOTER -->
+    <table width="100%" role="presentation" bgcolor="#e3e3e3">
+      <tr><td class="px" style="padding-top:26px;">
+        <table width="100%" role="presentation">
+          <tr><td align="center" class="h1" style="font-size:18px;">Need help or advice?</td></tr>
+          <tr><td align="center" class="body" style="padding-top:8px;">
+            Live Chat: <a href="https://bessemer.com.au/" target="_blank" style="color:#000;text-decoration:underline;">bessemer.com.au</a><br>
+            9am – 9:30pm AEDT / AEST Mon–Fri • 10am – 5:30pm AEDT / AEST Sat &amp; Sun
+          </td></tr>
+          <tr><td align="center" style="padding:12px 0 6px;">
+            <a href="#" target="_blank" class="small" style="text-decoration:underline;color:#000;">Click here to Contact Customer Service</a>
+          </td></tr>
+          <tr><td align="center" class="small" style="padding-top:10px;">
+            Mailing Address: Bessemer | PO Box 7224 | Melbourne 3004 | Australia<br>
+            This email was sent by Bessemer | Global Retail Brands Australia Pty Ltd
+          </td></tr>
+          <tr><td align="center" class="small" style="padding:12px 0 24px;">
+            To unsubscribe, <a href="#" style="text-decoration:underline;color:#000;">click here</a>.
+          </td></tr>
+        </table>
+      </td></tr>
+    </table>
+
+  </div>
 </body>
 </html>
