--- a/index.html
+++ b/index.html
@@ -105,177 +105,127 @@
               </td>
             </tr>
 
-  <!-- PRODUCT ROW 1 -->
-    <table width="100%" role="presentation" bgcolor="#ffffff" style="padding:10px 0;">
-      <tr>
-        <td align="center" style="width:36%; padding-left:20px; padding-right:10px;">
-          <a href="#" target="_blank">
-            <img src="https://cdn.shopify.com/s/files/1/0564/2223/6320/products/Option3-32CMPANS_40CMROASTER_1024x1024.png?v=1660890400"
-                 alt="Bessemer 4 Piece Cookware Starter Set">
-          </a>
-        </td>
-        <td valign="middle" style="width:44%; padding:10px;">
-          <div class="h1" style="font-size:18px;">Bessemer 4 Piece<br>Cookware Starter Set</div>
-          <div class="small" style="padding-top:6px;">
-            <div class="strike">4,299.96</div>
-            <strong>1,299.96</strong>
-          </div>
-        </td>
-        <td align="center" valign="middle" style="width:20%; padding-right:20px;">
-          <a class="btn" href="#" target="_blank">SHOP NOW</a>
-        </td>
-      </tr>
-    </table>
+               <!-- Abandoned Cart Tile -->
+              <tr>
+                <td class="pad-hrz" style="padding:25px 40px;">
+                  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+                    <tr>
+                      <!-- Image -->
+                      <td valign="middle" width="200" class="stack">
+                        <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="200" alt="Cart Item" class="full" style="display:block;width:200px;height:auto;border:0;">
+                      </td>
+                      <!-- Copy -->
+                      <td valign="middle" class="stack" style="text-align:center;padding:0 14px;">
+                        <div style="font:18px/1.3 Lato, Arial, Helvetica, sans-serif; font-weight:bold;color:#000;">Your Cart is Waiting</div>
+                        <div style="font:12px/1.4 Lato, Arial, Helvetica, sans-serif;color:#000;margin-top:6px;">Complete your checkout in minutes.</div>
+                      </td>
+                      <!-- CTA -->
+                      <td valign="middle" width="180" class="stack" style="text-align:right;">
+                        <table role="presentation" cellpadding="0" cellspacing="0" border="0" align="right">
+                          <tr>
+                            <td bgcolor="#d60e00" style="border-radius:2px;">
+                              <a href="#" target="_blank" style="display:block;padding:11px 22px;font:bold 16px/1.2 Lato, Arial, Helvetica, sans-serif;color:#fff;text-decoration:none;">SHOP NOW</a>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
-    <!-- PRODUCT ROW 2 -->
-    <table width="100%" role="presentation" bgcolor="#ffffff" style="padding:10px 0;">
-      <tr>
-        <td align="center" style="width:36%; padding-left:20px; padding-right:10px;">
-          <a href="#" target="_blank">
-            <img src="https://cdn.shopify.com/s/files/1/0564/2223/6320/products/1037710-BESS-MULTI-SPAN-24CM-EBONY_1024x1024.png?v=1630982858"
-                 alt="Bessemer Black Multi Saucepan 24cm">
-          </a>
-        </td>
-        <td valign="middle" style="width:44%; padding:10px;">
-          <div class="h1" style="font-size:18px;">Bessemer Black Multi<br>Saucepan 24cm</div>
-          <div class="small" style="padding-top:6px;">
-            <div class="strike">349.99</div>
-            <strong>319.99</strong>
-          </div>
-        </td>
-        <td align="center" valign="middle" style="width:20%; padding-right:20px;">
-          <a class="btn" href="#" target="_blank">SHOP NOW</a>
-        </td>
-      </tr>
-    </table>
+              <!-- Recommended -->
+              <tr>
+                <td align="center" style="font:bold 18px/1.2 Lato, Arial, Helvetica, sans-serif;color:#000;padding:20px 40px 10px;">RECOMMENDED JUST FOR YOU</td>
+              </tr>
+              <tr>
+                <td style="height:2px;background:#d5d3d0;"></td>
+              </tr>
+              <tr>
+                <td style="padding:16px 40px;">
+                  <table role="presentation" width="100%">
+                    <tr>
+                      <td width="33%" class="stack" align="center">
+                        <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="160" alt="Rec 1" style="display:block;width:160px;height:auto;margin:0 auto;">
+                      </td>
+                      <td width="33%" class="stack" align="center">
+                        <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/2.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="160" alt="Rec 2" style="display:block;width:160px;height:auto;margin:0 auto;">
+                      </td>
+                      <td width="33%" class="stack" align="center">
+                        <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/3.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="160" alt="Rec 3" style="display:block;width:160px;height:auto;margin:0 auto;">
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
-    <!-- RETURN TO CART CTA -->
-    <table width="100%" role="presentation" bgcolor="#ffffff">
-      <tr>
-        <td class="px" align="center" style="padding:24px 20px 20px;">
-          <a class="btn" href="#" target="_blank" style="display:block; width:100%; text-align:center; padding:16px 0; font-size:16px;">
-            RETURN TO CART
-          </a>
-        </td>
-      </tr>
-    </table>
+              <!-- Shop by Category -->
+              <tr>
+                <td align="center" style="font:bold 18px/1.2 Lato, Arial, Helvetica, sans-serif;color:#000;padding:20px 40px 10px;">Shop by Category</td>
+              </tr>
+              <tr>
+                <td style="padding:0 40px;">
+                  <table role="presentation" width="100%">
+                    <tr>
+                      <td align="center" style="padding:6px;"><a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Fryware &gt;</a></td>
+                      <td align="center" style="padding:6px;"><a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Saucepans &gt;</a></td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="padding:6px;"><a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Roasting &gt;</a></td>
+                      <td align="center" style="padding:6px;"><a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Multi-Pans &gt;</a></td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="padding:6px;"><a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Casseroles &gt;</a></td>
+                      <td align="center" style="padding:6px;"><a href="#" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Lids &gt;</a></td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
-    <!-- RECOMMENDED JUST FOR YOU -->
-    <table width="100%" role="presentation" bgcolor="#ffffff">
-      <tr><td class="px" style="padding-bottom:8px;">
-        <table width="100%" role="presentation">
-          <tr>
-            <td><hr></td>
-            <td width="280" align="center"><div class="h1" style="font-size:16px;letter-spacing:.3px;">RECOMMENDED JUST &nbsp;FOR YOU</div></td>
-            <td><hr></td>
-          </tr>
-        </table>
-      </td></tr>
-      <tr>
-        <td class="px" style="padding-bottom:6px;">
-          <table width="100%" role="presentation">
-            <tr>
-              <td width="33.33%" align="center" style="padding:0 8px;">
-                <a href="#" target="_blank">
-                  <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" alt="Bessemer Black Dutch">
-                </a>
-                <div class="small" style="padding-top:10px;">Bessemer Black Dutch</div>
-                <div class="price" style="padding-top:6px;">$ 259.99</div>
-              </td>
-              <td width="33.33%" align="center" style="padding:0 8px;">
-                <a href="#" target="_blank">
-                  <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/2.jpg?eh={{contact.12565}}&es={{contact.12566}}" alt="Bessemer Black">
-                </a>
-                <div class="small" style="padding-top:10px;">Bessemer Black</div>
-                <div class="price" style="padding-top:6px;">$ 159.99</div>
-              </td>
-              <td width="33.33%" align="center" style="padding:0 8px;">
-                <a href="#" target="_blank">
-                  <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/3.jpg?eh={{contact.12565}}&es={{contact.12566}}" alt="Bessemer Black Frypan">
-                </a>
-                <div class="small" style="padding-top:10px;">Bessemer Black Frypan</div>
-                <div class="price" style="padding-top:6px;">$ 199.99</div>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
+              <!-- Info Tiles -->
+              <tr><td style="padding:20px 0;"><img src="https://link.bessemer.com.au/custloads/1024002066/md_295693.jpg" width="600" class="full"></td></tr>
+              <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295694.jpg" width="600" class="full"></td></tr>
+              <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295695.jpg" width="600" class="full"></td></tr>
+              <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295696.jpg" width="600" class="full"></td></tr>
 
-    <!-- SHOP BY CATEGORY -->
-    <table width="100%" role="presentation" bgcolor="#ffffff">
-      <tr>
-        <td class="px" style="padding-top:14px;padding-bottom:12px;">
-          <table width="100%" role="presentation">
-            <tr>
-              <td><hr></td>
-              <td width="220" align="center"><div class="h1" style="font-size:16px;">Shop by Category</div></td>
-              <td><hr></td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr><td class="px" style="padding-bottom:16px;">
-        <table width="100%" role="presentation" cellspacing="10">
-          <tr>
-            <td width="50%"><a class="pill" href="#" target="_blank">Fryware &nbsp;›</a></td>
-            <td width="50%"><a class="pill" href="#" target="_blank">Multi-Pans &nbsp;›</a></td>
-          </tr>
-          <tr>
-            <td width="50%"><a class="pill" href="#" target="_blank">Saucepans &nbsp;›</a></td>
-            <td width="50%"><a class="pill" href="#" target="_blank">Casseroles &nbsp;›</a></td>
-          </tr>
-          <tr>
-            <td width="50%"><a class="pill" href="#" target="_blank">Roasting &nbsp;›</a></td>
-            <td width="50%"><a class="pill" href="#" target="_blank">Lids &nbsp;›</a></td>
-          </tr>
-        </table>
-      </td></tr>
-    </table>
+              <!-- Shipping / Returns -->
+              <tr>
+                <td style="padding:20px 10px;">
+                  <table role="presentation" width="100%">
+                    <tr>
+                      <td align="center" style="font:bold 16px Lato;">FREE STANDARD SHIPPING SITEWIDE</td>
+                      <td class="hide-m" align="center">|</td>
+                      <td align="center" style="font:bold 16px Lato;">30 DAYS RETURN</td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
-    <!-- AFTER CTA IMAGE STRIPS -->
-    <table width="100%" role="presentation" bgcolor="#ffffff">
-      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295693.jpg" alt="The Bessemer Difference"></td></tr>
-      <tr><td style="height:16px"></td></tr>
-      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295694.jpg" alt="Afterpay: Cook now, pay later"></td></tr>
-      <tr><td style="height:16px"></td></tr>
-      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295695.jpg" alt="More than half a century of cooking with Bessemer"></td></tr>
-      <tr><td style="height:16px"></td></tr>
-      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295696.jpg" alt="PFOA Free • Designed in Australia • Lifetime Guarantee"></td></tr>
-    </table>
+              <!-- Help/Service Footer -->
+              <tr>
+                <td style="background:#dcdcdc; padding:24px 10px;">
+                  <table width="100%">
+                    <tr><td align="center" style="font:bold 18px Lato;">Need help or advice?</td></tr>
+                    <tr><td align="center" style="font:16px Lato;">Live Chat : <a href="https://bessemer.com.au/" style="color:#000;text-decoration:underline;">bessemer.com.au</a><br>9am - 9:30pm AEDT / AEST Mon-Fri<br>10am - 5:30pm AEDT / AEST Sat and Sun</td></tr>
+                    <tr><td align="center" style="font:16px Lato;"><a href="#" style="color:#000;text-decoration:underline;">Click here to Contact Customer Service</a></td></tr>
+                  </table>
+                </td>
+              </tr>
 
-    <!-- SHIPPING / RETURNS TEXT STRIP -->
-    <table width="100%" role="presentation" bgcolor="#ffffff">
-      <tr>
-        <td align="center" style="font:14px/1.4 Arial,Helvetica,sans-serif; color:#000; padding:12px 20px;">
-          <strong>FREE SHIPPING ON ORDERS OVER $130</strong> &nbsp; | &nbsp; <strong>30 DAYS RETURN</strong>
-        </td>
-      </tr>
-    </table>
+              <!-- Footer -->
+              <tr>
+                <td align="center" style="font:12px Lato;color:#000;padding:20px;">
+                  Mailing Address: Bessemer | PO Box 7224 | Melbourne 3004 | Australia<br>
+                  This email was sent by Bessemer | Global Retail Brands Australia Pty Ltd
+                  <br><br>
+                  To unsubscribe from our mailing list, please <a href="#unsubscribe#" style="color:#000;text-decoration:underline;">click here</a>.
+                </td>
+              </tr>
 
-    <!-- FOOTER -->
-    <table width="100%" role="presentation" bgcolor="#e3e3e3">
-      <tr><td class="px" style="padding-top:26px;">
-        <table width="100%" role="presentation">
-          <tr><td align="center" class="h1" style="font-size:18px;">Need help or advice?</td></tr>
-          <tr><td align="center" class="body" style="padding-top:8px;">
-            Live Chat: <a href="https://bessemer.com.au/" target="_blank" style="color:#000;text-decoration:underline;">bessemer.com.au</a><br>
-            9am – 9:30pm AEDT / AEST Mon–Fri • 10am – 5:30pm AEDT / AEST Sat &amp; Sun
-          </td></tr>
-          <tr><td align="center" style="padding:12px 0 6px;">
-            <a href="#" target="_blank" class="small" style="text-decoration:underline;color:#000;">Click here to Contact Customer Service</a>
-          </td></tr>
-          <tr><td align="center" class="small" style="padding-top:10px;">
-            Mailing Address: Bessemer | PO Box 7224 | Melbourne 3004 | Australia<br>
-            This email was sent by Bessemer | Global Retail Brands Australia Pty Ltd
-          </td></tr>
-          <tr><td align="center" class="small" style="padding:12px 0 24px;">
-            To unsubscribe, <a href="#" style="text-decoration:underline;color:#000;">click here</a>.
-          </td></tr>
-        </table>
-      </td></tr>
-    </table>
-
-  </div>
-</body>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </center>
+  </body>
 </html>
