--- a/index.html
+++ b/index.html
@@ -94,44 +94,34 @@
     <tr><td height="30"></td></tr>
   </table>
 
-<!-- Abandoned Cart (clean layout with Scarab image + Title/Price + CTA) -->
-<tr>
-  <td style="padding:20px;">
-    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="table-layout:fixed;">
-      <tr>
-        <!-- Product Image -->
-        <td valign="top" width="220" class="stack" style="text-align:center;">
-          <a href="#" target="_blank">
-            <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/4dl16d/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" 
-                 width="200" alt="Your Cart Item" 
-                 style="display:block;margin:0 auto;width:200px;max-width:200px;height:auto;border:0;">
-          </a>
-          <!-- Title + Price -->
-          <div style="font:16px/1.4 Lato,Arial,Helvetica,sans-serif;color:#000;margin-top:10px;">
-            {{ item['title'] }}
-          </div>
-          <div style="font:16px/1.4 Lato,Arial,Helvetica,sans-serif;color:#ED1B24;font-weight:bold;">
-            ${{ item['price'] }}
-          </div>
-        </td>
-
-        <!-- CTA -->
-        <td valign="middle" align="center" class="stack" style="text-align:center;padding-left:20px;">
-          <table role="presentation" cellpadding="0" cellspacing="0" bgcolor="#ED1B24" style="border-radius:2px;margin:0 auto;">
-            <tr>
-              <td>
-                <a href="#" target="_blank" 
-                   style="display:block;padding:12px 26px;font:bold 16px/1.2 Lato,Arial,Helvetica,sans-serif;color:#fff;text-decoration:none;">
-                  SHOP NOW
-                </a>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-  </td>
-</tr>
+              <!-- Abandoned Cart Tile -->
+              <tr>
+                <td class="pad-hrz" style="padding:25px 40px;">
+                  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+                    <tr>
+                      <!-- Image -->
+                      <td valign="middle" width="200" class="stack">
+                        <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="200" alt="Cart Item" class="full" style="display:block;width:200px;height:auto;border:0;">
+                      </td>
+                      <!-- Copy -->
+                      <td valign="middle" class="stack" style="text-align:center;padding:0 14px;">
+                        <div style="font:18px/1.3 Lato, Arial, Helvetica, sans-serif; font-weight:bold;color:#000;">Bessemer Black Universal</div>
+                        <div style="font:12px/1.4 Lato, Arial, Helvetica, sans-serif;color:#000;margin-top:6px;">$259.99</div>
+                      </td>
+                      <!-- CTA -->
+                      <td valign="middle" width="180" class="stack" style="text-align:right;">
+                        <table role="presentation" cellpadding="0" cellspacing="0" border="0" align="right">
+                          <tr>
+                            <td bgcolor="#d60e00" style="border-radius:2px;">
+                              <a href="#" target="_blank" style="display:block;padding:11px 22px;font:bold 16px/1.2 Lato, Arial, Helvetica, sans-serif;color:#fff;text-decoration:none;">SHOP NOW</a>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
 
   <!-- Recommended -->
